@@ -522,6 +522,9 @@ t/data/autoqc/review/not_hash/product_release.yml
 t/data/autoqc/review/mqc_type/product_release.yml
 t/data/autoqc/review/unknown_qc_type/product_release.yml
 t/data/autoqc/review/uqc_type/product_release.yml
+t/data/autoqc/review/default_and_study_section/product_release.yml
+t/data/autoqc/review/default_section/product_release.yml
+t/data/autoqc/review/wrong_default_and_study_section/product_release.yml
 t/data/autoqc/review/samplesheet_27483.csv
 t/data/autoqc/review/samplesheet_29524.csv
 t/data/autoqc/review/29524#2.composition.json
